<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StepOne">
    <include layout="@layout/netflix_step_one_toolbar"
        android:id="@+id/toolbarID_step_one"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbarID_step_one"
        android:layout_marginTop="90sp"
        >
    <include layout="@layout/lock_icon"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_1_str"
        android:textStyle="bold"
        android:id="@+id/step_one_txt"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:gravity="center"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_your_plan"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textColor="@color/black"
            android:gravity="center"
            />
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="7sp"
                >
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:src="@drawable/ic_baseline_check_24"
                    android:contentDescription="@string/check_mark_content_desc"
                    />
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:src="@drawable/ic_baseline_check_24"
                    android:contentDescription="@string/check_mark_content_desc"
                    />
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:src="@drawable/ic_baseline_check_24"
                    android:contentDescription="@string/check_mark_content_desc"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="7sp"
                android:paddingTop="12sp"
                >
                <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="60sp"
                 android:text="No Commitments , Cancel Anytime"
                 android:textSize="15sp"
                 android:textStyle="italic"
                 android:textColor="@color/black"
                 />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:text="Everything at Netflix for One Price"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:text="No Ads No Extra Fees. Ever"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/netflixBrandColor"
            android:layout_margin="7sp"
            android:id="@+id/see_plans_btn_id"
            android:text="See Your Plans"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </LinearLayout>
</RelativeLayout>