<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StepTwo">
    <include layout="@layout/netflix_step_one_toolbar"
        android:id="@+id/toolbarID_step_one"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/text_placeholder"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90sp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Step 2 of 3"
        android:textStyle="bold"
        android:id="@+id/step_two_txt"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        android:text="@string/create_pass_txt"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="italic"
        android:text="Just few steps and you are done !"
        />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditLayout"
        android:theme="@style/Widget.AppCompat.EditText"
        android:background="@drawable/white_edittext_design"
        app:boxBackgroundMode="outline"
        android:padding="5sp"
        android:layout_marginEnd="12sp"
        android:layout_marginStart="12sp"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_placeholder"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5sp"
            android:layout_margin="4sp"
            android:id="@+id/emailEdittext"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:lines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textColorHint="@color/netflix_editText_color"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editLayout"
        android:layout_width="match_parent"
        android:layout_marginStart="12sp"
        app:layout_constraintTop_toBottomOf="@id/text_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/black"

        android:layout_marginEnd="12sp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_edittext_design"
        android:layout_marginTop="90sp"
        android:padding="5sp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5sp"
            android:layout_margin="4sp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@id/password_editText"
            android:imeOptions="actionNext"
            android:lines="1"
            android:hint="@string/password"
            android:textColorHint="@color/netflix_editText_color"
            android:inputType="textPassword"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:id="@+id/continue_btn_step2"
        android:textColor="@color/white"
        android:background="@color/netflixBrandColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_editLayout"
        android:layout_margin="16sp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>