<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaymentGateway">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar_payment_ID"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@mipmap/netflix_welcome_logo_foreground"
        android:contentDescription="@string/netflixicon"
        />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      android:layout_marginTop="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Step 3 of 3"
         android:textStyle="bold"
         android:padding="3sp"
         android:textSize="18sp"
         android:textColor="@color/black"
         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Set up a credit or debit card "
         android:textStyle="bold"
         android:textSize="18sp"
         android:padding="3sp"
         android:textColor="@color/black"
         />
     <LinearLayout
         android:id="@+id/payment_init_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="5sp"
         >

         <ImageView
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:padding="2sp"
             android:src="@drawable/visacard"
             />
         <ImageView
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:padding="2sp"
             android:src="@drawable/mastercard"
             />
         <ImageView
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:padding="2sp"
             android:src="@drawable/americanexpress"
             />
         <ImageView
             android:layout_width="40sp"
             android:layout_height="40sp"
             android:src="@drawable/lastcard"
             android:padding="2sp"
             />
     </LinearLayout>
     <EditText
         android:id="@+id/first_name_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:inputType="text"
         android:hint="First Name"
         android:background="@drawable/white_edittext_design"
         android:padding="10sp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:layout_margin="3sp"

         />
     <EditText
         android:id="@+id/last_name_id"

         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:inputType="text"
         android:hint="Last Name"
         android:background="@drawable/white_edittext_design"
         android:padding="10sp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:layout_margin="3sp"
         />
     <EditText
         android:id="@+id/contact_no_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:inputType="number"
         android:hint="Contact No"
         android:background="@drawable/white_edittext_design"
         android:padding="10sp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:layout_margin="3sp"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="10sp"
         android:elevation="4sp"
         android:background="#F8EFD3B6"
         >
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="5sp"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="349/ month"
                 android:textStyle="bold"
                 android:id="@+id/plan_cost_details"
                 android:padding="5sp"
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Basic"
                 android:id="@+id/plan_name_txt"
                 android:padding="5sp"
                 android:textStyle="bold"
                 android:textSize="18sp"
                 android:textColor="@color/black"
                 />
         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Change"
             android:id="@+id/change_txt"
             android:textSize="19sp"
             android:textColor="@color/netflixBrandColor"
             android:textStyle="bold"
             android:paddingStart="24sp"
             android:paddingEnd="24sp"
             android:paddingTop="24sp"
             android:paddingBottom="24sp"/>
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5sp"
         android:id="@+id/terms_txt"
         android:textColor="@color/black"
         android:text="@string/term_text_detail"/>
     <androidx.appcompat.widget.AppCompatCheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/agree_chk_box"
         android:text="@string/check_statement_txt"
     />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Start Memebership"
         android:padding="12sp"
         android:id="@+id/start_member_btn"
         android:layout_margin="5sp"
         />
 </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>